--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
 {% for post in posts %}
-    <h1>{{post.title}}</h1>
+    <h1><a href="{% url 'post-detail' post.id %}">{{post.title}}</a></h1>
     <p>By {{post.author}} on {{post.date_posted}}</p>
     <p>{{post.content}}</p>
 {% endfor %}
