--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,9 +1,9 @@
 {% extends "blog/base.html" %}
 {% block content %}
+<h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }}) </h1>
 {% for post in posts %}
     <h1><a href="{% url 'post-detail' post.id %}">{{post.title}}</a></h1>
-    <a href="{% url 'user-post' post.author.username %}"> {{post.author}}</a> 
-    <p>on {{post.date_posted}}</p>
+    <p>By {{post.author}} on {{post.date_posted}}</p>
     <p>{{post.content}}</p>
 {% endfor %}
 {% if is_paginated %}
